# node-vmware-vix

./: CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  package.json  test.js
cmake/: FindNAPI.cmake  FindVMwareVIX.cmake
src/: CMakeLists.txt  HostWrapper.hpp  SmartHandle.hpp  VixWorker.hpp  vmware.cpp  vmware.hpp
